--- a/style001.css
+++ b/style001.css
@@ -129,7 +129,11 @@
 	background-color: hsl(0, 0%, 9%);
 }
 
-.searchBar_621ec {
+.searchBar__621ec {
+	background-color: hsl(0, 0%, 9%);
+}
+
+.content__690c5 {
 	background-color: hsl(0, 0%, 9%);
 }
 
