--- a/style001.css
+++ b/style001.css
@@ -125,6 +125,10 @@
 	background: var(--message-hover);
 }
 
+.sidebar_e031be {
+	background-color: hsl(0, 0%, 9%);
+}
+
 .scroller__89969 {
 	background-color: hsl(0, 0%, 9%);
 }
